--- a/portfolio.html
+++ b/portfolio.html
@@ -214,6 +214,15 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe-footer-container">
+                <p class="subscribe-title">Подпишитесь на рассылку</p>
+                <div class="subscribe-area"><form class="mail-form">
+                    <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text"/>
+                </form>
+                <div class="subscribe-btn-tumb"><button type="submit" class="subscribe-btn">Подписаться</button><svg class="subscribe-btn-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg></div></div>
+            </div>
         </div>
     </footer>
 </body>
