add-icons-to-sprite
add modal icons to general sprite

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
                 <label class="modal-label">
                     Имя
-                    <input type="text" class="input-modal-form" name="name"/>
+                    <input type="text" class="input-modal-form"  name="name"/>
                 </label>
                 <label class="modal-label">
                     Телефон
@@ -321,9 +321,9 @@
                 id="modal-check" 
                 name="modal-check"/>
                 <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю
-                    <a href="">Условия договора</a>
+                    <a href="" class="conditions-modal">Условия договора</a>
                 </label>
-                <button type="submit" class="modal-botton"></button>
+                <button type="submit" class="modal-botton">Отправить</button>
                 </div>
                 </div>
 
