--- a/index.html
+++ b/index.html
@@ -301,15 +301,25 @@
             <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
                 <label class="modal-label">
                     Имя
-                    <input type="text" class="input-modal-form"  name="name"/>
+                    <div class="input-modal-form">
+                        <input type="text" class="input-modal-form" name="name"/>
+                        <svg class="modal-form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person"></use>
+                    </svg></div>
                 </label>
                 <label class="modal-label">
                     Телефон
-                    <input type="tel" class="input-modal-form" name="telephone" />
+                    <div class="input-modal-form">
+                    <input type="tel" class="input-modal-form" name="telephone" /><svg class="modal-form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email"></use>
+                    </svg></div>
                 </label>
                 <label class="modal-label">
                     Почта
-                    <input type="email" class="input-modal-form" name="mail" />
+                    <div class="input-modal-form">
+                    <input type="email" class="input-modal-form" name="mail" /><svg class="modal-form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email"></use>
+                    </svg></div>
                 </label>
                 <label class="modal-label">
                     Комментарий
