--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
             </div>
         </div>
     </footer>
+   <!-- modal-->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close><svg class="modal-icon" width="11" height="11">
@@ -302,25 +303,33 @@
                 <label class="modal-label">
                     Имя
                     <div class="input-modal-form">
-                        <input type="text" class="input-modal-form" name="name"/>
+                        <input type="text" class="input-modal" name="name"/>
                         <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg></div>
                 </label>
-                <label class="modal-label">
-                    Телефон
-                    <div class="input-modal-form">
-                    <input type="tel" class="input-modal-form" name="telephone" /><svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-email"></use>
-                    </svg></div>
-                </label>
-                <label class="modal-label">
-                    Почта
-                    <div class="input-modal-form">
-                    <input type="email" class="input-modal-form" name="mail" /><svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-email"></use>
-                    </svg></div>
-                </label>
+            <div class="modal-reg-container">
+                <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
+                    <label class="modal-label">
+                        Телефон
+                        <div class="input-modal-form">
+                            <input type="text" class="input-modal" name="name" />
+                            <svg class="modal-form-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                        </div>
+                    </label>
+            <div class="modal-reg-container">
+                <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
+                    <label class="modal-label">
+                        Почта
+                        <div class="input-modal-form">
+                            <input type="text" class="input-modal" name="name" />
+                            <svg class="modal-form-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                        </div>
+                    </label>
                 <label class="modal-label">
                     Комментарий
                     <textarea name="feedback" class="modal-textarea" placeholder="Введите текст"></textarea>
