--- a/portfolio.html
+++ b/portfolio.html
@@ -216,12 +216,13 @@
             </div>
             <div class="subscribe-footer-container">
                 <p class="subscribe-title">Подпишитесь на рассылку</p>
-                <div class="subscribe-area"><form class="mail-form">
-                    <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text"/>
+                <form class="subscribe-area">
+                    <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text" />
+            
+                    <button type="submit" class="subscribe-btn">Подписаться<svg class="subscribe-btn-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg></button>
                 </form>
-                <button type="submit" class="subscribe-btn">Подписаться<svg class="subscribe-btn-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg></button></div>
             </div>
         </div>
     </footer>
