--- a/index.html
+++ b/index.html
@@ -279,15 +279,13 @@
             </div>
             <div class="subscribe-footer-container">
                 <p class="subscribe-title">Подпишитесь на рассылку</p>
-                <div class="subscribe-area">
-                    <form class="mail-form">
+                <form class="subscribe-area">
                         <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text" />
-                    </form>
+                    
                     <button type="submit" class="subscribe-btn">Подписаться<svg class="subscribe-btn-icon" width="24"
                             height="24">
                             <use href="./images/icons.svg#icon-icon-send"></use>
-                        </svg></button>
-                </div>
+                        </svg></button></form>
             </div>
         </div>
     </footer>
@@ -298,41 +296,38 @@
                 <use href="./images/icons.svg#icon-Vector"></use>
             </svg></button>
             <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-            <div class="modal-reg-container">
-            <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
+            <form name="signup-form" class="modal-form" autocomplete="on" novalidate>
                 <label class="modal-label">
                     Имя
-                    <div class="input-modal-form">
+                    <span class="input-modal-form">
                         <input type="text" class="input-modal" name="name"/>
                         <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
-                    </svg></div>
+                    </svg></span>
                 </label>
-            <div class="modal-reg-container">
-                <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
+                <form name="signup-form" class="modal-form" autocomplete="on" novalidate>
                     <label class="modal-label">
                         Телефон
-                        <div class="input-modal-form">
+                        <span class="input-modal-form">
                             <input type="text" class="input-modal" name="name" />
                             <svg class="modal-form-icon" width="18" height="18">
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
-                        </div>
+                        </span>
                     </label>
-            <div class="modal-reg-container">
-                <form name="signup_form" class="modal-form" autocomplete="on" novalidate>
+                <form name="signup-form" class="modal-form" autocomplete="on" novalidate>
                     <label class="modal-label">
                         Почта
-                        <div class="input-modal-form">
+                        <span class="input-modal-form">
                             <input type="text" class="input-modal" name="name" />
                             <svg class="modal-form-icon" width="18" height="18">
                                 <use href="./images/icons.svg#icon-email"></use>
                             </svg>
-                        </div>
+                        </span>
                     </label>
                 <label class="modal-label">
                     Комментарий
-                    <textarea name="feedback" class="modal-textarea" placeholder="Введите текст"></textarea>
+                    <textarea name="feedback" class="modal-textarea" placeholder="Введите текст" class="text-placeholder"></textarea>
                 </label>
                 <div class="checkbox-container">
                 <input type="checkbox" 
@@ -342,11 +337,9 @@
                 <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю
                     <a href="" class="conditions-modal">Условия договора</a>
                 </label>
-                <button type="submit" class="modal-botton">Отправить</button>
+                <button type="submit" class="modal-button">Отправить</button>
                 </div>
-                </div>
-
-            </form>
+                </div></form>
         </div>
     </div>
     <script src="./modal.js"></script>
