--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
+            </div>
         </section>
         <!--переваги -->
         <section class="section">
@@ -210,26 +211,26 @@
             <h2 class="regular-customers-title">Постоянные клиенты</h2>
             <ul class="regular-customers-list">
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo"></use></svg></a></li>
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo-first"></use>
                     </svg></a></li>
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo-second"></use>
                     </svg></a></li>
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo-third"></use>
                     </svg></a></li>
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo-fourth"></use>
                     </svg></a></li>
                 <li class="regular-customers-item">
-                    <a href=""class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
+                    <a href="" class="regular-customers-link"><svg class="customers-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo-fiveth"></use>
                     </svg></a></li>
             </ul>
@@ -280,7 +281,7 @@
             <div class="subscribe-footer-container">
                 <p class="subscribe-title">Подпишитесь на рассылку</p>
                 <form class="subscribe-area">
-                        <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text" />
+                        <input type="email" class="input-area" placeholder="E-mail" class="placeholder-text-mail" />
                     
                     <button type="submit" class="subscribe-btn">Подписаться<svg class="subscribe-btn-icon" width="24"
                             height="24">
@@ -339,7 +340,7 @@
                 </label>
                 <button type="submit" class="modal-button">Отправить</button>
                 </div>
-                </div></form>
+                </form>
         </div>
     </div>
     <script src="./modal.js"></script>
