--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./sass/main.scss">
 </head>
 
 <body>
     <!--шапка-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
         <nav class="navigation">
             <a href="index.html" class="link-logo"> Web<span class="logo-upper">Studio</span></a>
@@ -37,17 +38,17 @@
                 </svg>+380961111111</a></li>
         </ul>
         </div>
-    </header>
+    </header> -->
     <!--герой-->
-    <main class="hero">
+    <!-- <main class="hero">
         <section class="hero-section">
             <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
-        </section>
+        </section> -->
         <!--переваги -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
             <h2 class="visually-hidden"> Наши премиущества</h2>
             <ul class="advantages-list">
@@ -77,9 +78,9 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
         <!--чим-ми-займаємось-->
-        <section class="what-do-section section">
+        <!-- <section class="what-do-section section">
             <div class="container">
             <h2 class="what-do-title">Чем мы занимаемся</h2>
             <ul class="what-do-list">
@@ -96,9 +97,9 @@
                         height="294"><div class="paragraf-container"><p class="what-do-posttitle">Дизайнерские решения</p></div></div></li>
             </ul>
             </div>
-        </section>
+        </section> -->
         <!--наша-команда-->
-        <section class="our-team-section section">
+        <!-- <section class="our-team-section section">
             <div class="container">
             <h2 class="our-team-title">Наша команда</h2>
             <ul class="our-team-list">
@@ -236,9 +237,9 @@
             </ul>
             </div>
         </section>
-    </main>
+    </main> -->
     <!--footer-->
-    <footer class="footer ">
+    <!-- <footer class="footer ">
         <div class="container footer-container">
             <div class="footer-adres-container">
                 <a href="index.html" class="link-logo"> Web<span class="logo-down">Studio</span></a>
@@ -289,9 +290,9 @@
                         </svg></button></form>
             </div>
         </div>
-    </footer>
+    </footer> -->
    <!-- modal-->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close><svg class="modal-icon" width="11" height="11">
                 <use href="./images/icons.svg#icon-Vector"></use>
@@ -342,8 +343,9 @@
                 </div>
                 </form>
         </div>
-    </div>
-    <script src="./modal.js"></script>
+    </div> -->
+    <!-- <script src="/JS/modal.js"></script> -->
+    <script src="/JS/test.js"></script>
 </body>
 
 </html>
